# codex-helper

./: .gitignore  AGENTS.md  README.md  README_CN.md  package.json  tsconfig.json
docs/: references.md  release-guide.md
runtime/: _test-port-detection.test.js  _test-ports-panel.test.js  _test-runtime-mutable-state.test.js  _test-sessions.test.js  _test-settings.test.js  account.js  bootstrap.js  bundle.ts  constants.js  core.js  index.json  native-settings.js  ports.js  renderer-port-detection.test.js  renderer-ports-panel.test.js  renderer-settings.test.js  renderer.js  sessions.js  settings.js  styles.js  zed-open.js
scripts/: _test-release-workflow.test.js  build-macos-app.sh  build-macos-dmg.sh  inspect-bottom-panel.mjs  inspect-ui-surfaces.mjs  png-to-icns.sh  probe-codex-global-state.mjs  probe-pinned-summary-dom.mjs  validate-native-settings-helpers.mjs  validate-native-settings.mjs  validate-native-settings.test.js
src/: bridge.test.ts  bridge.ts  cdp.test.ts  cdp.ts  debug-port.test.ts  debug-port.ts  debug.ts  injection-sync.test.ts  injection-sync.ts  launch-script.test.js  launch.ts  launcher.test.ts  launcher.ts  paths.ts  port.ts  ports.ts  (+8 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: index.html
src-tauri/src/: app.rs  backup.rs  bridge.rs  bridge_cli.rs  cdp.rs  chat_search.rs  chat_time.rs  codex_app_server.rs  codex_control.rs  debug_port.rs  launcher.rs  lib.rs  logging.rs  main.rs  markdown.rs  models.rs  ports.rs  proxy_env.rs  routes.rs  runtime.rs  session_actions.rs  settings.rs  state_dir.rs  storage.rs  zed.rs
(+11 files in other folders)
