[package]
name = "codex-helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_helper"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-helper"
path = "src/main.rs"

[[bin]]
name = "codex-helper-bridge"
path = "src/bridge_cli.rs"

[build-dependencies]
png = "0.17"
serde_json = "1"
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
